edit class